-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.464 2009-04-08 18:46:30 guru Exp $
-----------------------------------------------------------------------------------------

2009-04-08	pwessel
	* gmt_support.c:	The 3-D view -E option used in many programs (such as psxyz)
				could not handle exponential notations.
				
2009-04-07	remko
	* configure.ac:		Auto detect octave and/or matlab directories.
				Do not say "yes" to compilation when supplement not available.

2009-04-05	pwessel
	* mgd77/mgd77manage.c:		The -D option would remove original attributes.  Now
				both original and revised attributes are carried in memory.
				This problem also affected mgd77convert -FC if used on a
				file after mgd77manage -D had been run.
2009-03-31	remko
	* gmt_map.c (GMT_get_datum):	Reuse GMT_get_ellipsoid to capture <a>,<inv_f> format.
	* gmt_init.c:		Changed custom ELLIPSOID format to <a>[,<inv_f|b=<b>|f=<f>].
				Properly write out custom ELLIPSOID into .gmtdefaults4.

2009-03-30	pwessel
	* mgd77/mgd77.c:	To avoid Windows crashes, made sure free and GMT_free are
				used on the items allocated by strdup or GMT_memory, resp.
	* x2sys/x2sys.c:	---"---
				Wrong array argument passed for correction aux values.
	* x2sys/x2sys_datalist.c:	Only ASCII output had corrections (-L) applied.

2009-03-30	remko
	* gmt_init.c (GMT_get_ellipsoid):	When importing ellipsoid file, allow a,0,0;
				a,0,f; a,b,0; or a,b,f as ellipsoid parameters.
				If file does not exist, attempt to read name as a[/[b=|f=]f],
				meaning <semi-major axis>, b=<semi-minor axis>, f=<flattening>,
				or <inverse flattening>.
	* gmt_defaults.txt:	Adjusted accordingly. Also specified SEMI-major/minor axis.
	* gmt.h:		Removed pol_radius from ELLIPSOID structure. Never used.
	* Ellipsoids.txt:	Added Moon and planets (IAU2000).
				Allow 0, b, or 1/f as second ellipsoid parameter.
	* src/GNUmakefile:	Adjusted accordingly.